--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.13.1
 aniso8601==9.0.1
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -33,6 +34,7 @@ PyYAML==6.0.1
 referencing==0.35.1
 requests==2.31.0
 rpds-py==0.18.1
+soupsieve==2.5
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 urllib3==2.2.1
