--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^7.1.0",
     "antd": "^5.15.3",
     "apexcharts": "^3.48.0",
+    "axios": "^1.7.2",
     "jodit-react": "^4.0.15",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
