--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 distlib==0.3.8
+dnspython==2.6.1
+et-xmlfile==1.1.0
 filelock==3.14.0
 Flask==3.0.3
 Flask-Cors==4.0.0
@@ -23,6 +25,7 @@ jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 Mako==1.3.3
 MarkupSafe==2.1.5
+openpyxl==3.1.3
 pipenv==2023.12.1
 platformdirs==4.2.1
 psycopg2==2.9.9
