--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.5",
-    "@ckeditor/ckeditor5-build-classic": "^41.4.1",
+    "@ckeditor/ckeditor5-basic-styles": "^41.4.2",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-editor-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-essentials": "^41.4.2",
+    "@ckeditor/ckeditor5-paragraph": "^41.4.2",
     "@ckeditor/ckeditor5-react": "^6.3.0",
+    "@ckeditor/ckeditor5-theme-lark": "^41.4.2",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
@@ -23,7 +29,9 @@
     "antd": "^5.15.3",
     "apexcharts": "^3.48.0",
     "axios": "^1.7.2",
-    "jodit-react": "^4.0.15",
+    "ckeditor4-react": "^5.1.0",
+    "jodit-react": "^4.1.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
