--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@ckeditor/ckeditor5-react": "^6.3.0",
     "@ckeditor/ckeditor5-theme-lark": "^41.4.2",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
@@ -26,6 +28,9 @@
     "@mui/material": "^5.15.12",
     "@mui/x-charts": "^7.0.0",
     "@mui/x-date-pickers": "^7.1.0",
+    "@uiw/codemirror-theme-vscode": "^4.22.2",
+    "@uiw/codemirror-themes": "^4.22.2",
+    "@uiw/react-codemirror": "^4.22.2",
     "antd": "^5.15.3",
     "apexcharts": "^3.48.0",
     "axios": "^1.7.2",
